--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,11 +4,7 @@
 cmake_minimum_required (VERSION 3.8)
 
 project ("iota")
-if (MSVC)
-	set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std:c++17")
-elseif(GNU)
-	set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++17")
-endif ()
+set (CMAKE_CXX_STANDARD 17)
 
 # Include sub-projects.
 add_subdirectory ("iota")
